--- a/sportmates_frontend/app/src/main/res/layout/activity_main.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:text="Közelben lévő események"
+            android:text="@string/main_nearby_events"
             android:paddingBottom="16dp"
             android:paddingTop="16dp"
             android:textAllCaps="true"
