--- a/sportmates_frontend/app/src/main/res/layout/activity_profile.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_profile.xml
@@ -1,82 +1,171 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="hu.application.sportmates.controller.ProfileActivity">
 
+    <!-- HEADER -->
+    <!-- FORMAT CODE: CTRL + ALT + L -->
+
     <TextView
-        android:text="@string/profile_activity_header"
-        android:textAllCaps="true"
-        android:textSize="24sp"
-        android:padding="16dp"
-        android:textAlignment="center"
+        android:id="@+id/my_profile_header"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:text="@string/profile_activity_header"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="24sp" />
+
+    <!-- NAME -->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/my_profile_header"
+        android:layout_gravity="left"
+        android:padding="16dp"
+        android:text="@string/profile_name"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/my_profile_header"
+        android:padding="16dp"
         android:text="@string/profile_name"
         android:textSize="16sp"
-        android:padding="16dp"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textStyle="bold" />
 
+    <!-- BIRTHDATE -->
     <TextView
-        android:id="@+id/tvUsername"
-        android:text="@string/profile_username"
-        android:textSize="16sp"
-        android:padding="16dp"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/tvEmail"
-        android:text="@string/profile_email"
-        android:textSize="16sp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvName"
         android:padding="16dp"
-        android:textStyle="bold"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:text="@string/profile_birthdate"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvBirthdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/tvName"
+        android:padding="16dp"
         android:text="@string/profile_birthdate"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:padding="16dp"
+        android:textStyle="bold" />
+
+    <!-- CITY -->
+    <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvBirthdate"
+        android:padding="16dp"
+        android:text="@string/profile_city"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvCity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/tvBirthdate"
+        android:padding="16dp"
         android:text="@string/profile_city"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:padding="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textStyle="bold" />
+
+    <!-- USERNAME -->
 
     <TextView
-        android:id="@+id/tvGender"
-        android:text="@string/profile_gender"
-        android:textSize="16sp"
-        android:padding="16dp"
-        android:textStyle="bold"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvCity"
+        android:padding="16dp"
+        android:text="@string/profile_username"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/tvCity"
+        android:padding="16dp"
+        android:text="@string/profile_username"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <!-- EMAIL -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvUsername"
+        android:padding="16dp"
+        android:text="@string/profile_email"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/tvUsername"
+        android:padding="16dp"
+        android:text="@string/profile_email"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <!-- PHONE NUMBER -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvEmail"
+        android:padding="16dp"
+        android:text="@string/profile_phone_number"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvPhoneNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/tvEmail"
+        android:padding="16dp"
         android:text="@string/profile_phone_number"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:padding="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:textStyle="bold" />
 
-</LinearLayout>
+    <!-- GENDER -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvPhoneNumber"
+        android:padding="16dp"
+        android:text="@string/profile_gender"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvGender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/tvPhoneNumber"
+        android:padding="16dp"
+        android:text="@string/profile_gender"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+</RelativeLayout>
