--- a/sportmates_frontend/app/src/main/res/layout/activity_event.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_event.xml
@@ -17,4 +17,10 @@
         android:layout_height="wrap_content"
         />
 
+    <ListView
+        android:id="@+id/eventsListView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+    </ListView>
+
 </LinearLayout>
