ProfileActivity resource string fixed

--- a/sportmates_frontend/app/src/main/res/layout/activity_event_details.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_event_details.xml
@@ -173,5 +173,13 @@
         android:textSize="16sp"
         android:textStyle="bold" />
 
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvAudience"
+        >
+
+    </Spinner>
+
 
 </RelativeLayout>
