--- a/sportmates_frontend/app/src/main/res/layout/activity_main.xml
+++ b/sportmates_frontend/app/src/main/res/layout/activity_main.xml
@@ -28,11 +28,13 @@
             android:textAlignment="center"
             android:textSize="20sp" />
 
-        <ListView
-            android:id="@+id/eventsListView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent">
-        </ListView>
+            <ListView
+                android:id="@+id/eventsListView"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                >
+            </ListView>
+
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
